--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hallo Internet bisher habe ich gerlernt wie ich eine website erstelle,was eine html und eine mlm ist.
+Hallo Internet bisher habe ich gerlernt wie ich eine website erstelle,was eine html und eine md ist.
