--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 Hallo Internet bisher habe ich gerlernt wie ich eine website erstelle,was eine html und eine md ist.
+Außerdem weiß ich das es viel leichter ist etwas mit codes zu machen als man es denkt.
