--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <title>Page Title</title>
         </head>
         <body>
-    <script src="script.js"></script>
+            <script src="script.js"></script>
             <h1>This is a Heading</h1>
             <p>This is a paragraph.</p>
             this is fun
@@ -16,7 +16,7 @@
             
             <br/>
             
-            <h1> id="demo" This is an headin test </h1>
+            <h1 id="demo">  This is an Heading test </h1>
 
 
             <button> onclick="myfunction()">Click me</button>
