java script anfänger

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 id="demo">  This is an Heading test </h1>
 
 
-            <button> onclick="myfunction()">Click me</button>
+            <button> onclick="myFunction()">Click me</button>
             
             <p>hello</p>
         </body>
